GearsetPOC/force-app/main/default/objects/Case_eVoucher__c/Case_eVoucher__c.object-meta.xml
<CustomObject>
    <label>Case eVoucher</label>
    <nameField>
        <displayFormat>CeV{000000000}</displayFormat>
        <label>Case eVoucher Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case eVouchers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>