GearsetPOC/force-app/main/default/objects/Case_eVoucher__c/fields/eVoucher__c.field-meta.xml
<CustomField>
    <fullName>eVoucher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>eVoucher</label>
    <referenceTo>eVoucher__c</referenceTo>
    <relationshipLabel>Case eVouchers</relationshipLabel>
    <relationshipName>Case_eVouchers</relationshipName>
    <type>Lookup</type>
</CustomField>