GearsetPOC/force-app/main/default/objects/Case_eVoucher__c/fields/New_Amount__c.field-meta.xml
<CustomField>
    <fullName>New_Amount__c</fullName>
    <label>New Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>