GearsetPOC/force-app/main/default/objects/Case_eVoucher__c/fields/Senior_Advisor_Comment__c.field-meta.xml
<CustomField>
    <fullName>Senior_Advisor_Comment__c</fullName>
    <label>Senior Advisor Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>