GearsetPOC/force-app/main/default/objects/Case_eVoucher__c/fields/Voucher_Custom_Amount__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Custom_Amount__c</fullName>
    <formula>IF( NOT( ISNULL( eVoucher__c ) ) ,   TEXT( eVoucher__r.Amount__c ) &amp; &quot; &quot; &amp;  eVoucher__r.Currency__c   , &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voucher Amount Issued</label>
    <type>Text</type>
</CustomField>