GearsetPOC/force-app/main/default/objects/Case_eVoucher__c/fields/Voucher_URL__c.field-meta.xml
<CustomField>
    <fullName>Voucher_URL__c</fullName>
    <label>Voucher URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>