GearsetPOC/force-app/main/default/objects/Case_eVoucher__c/validationRules/Cannot_change_the_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_the_fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  $Permission.Case_eVoucher_No_Edit_Permission_Set , 
  OR(ISPICKVAL(Status__c, &quot;In progress&quot;),
    ISPICKVAL(Status__c, &quot;Completed - rejected&quot;),
    ISPICKVAL(Status__c, &quot;Completed - resolved&quot;)
  )
)</errorConditionFormula>
    <errorMessage>The record cannot be modified after it has been actioned.</errorMessage>
</ValidationRule>