GearsetPOC/force-app/main/default/objects/Case_eVoucher__c/listViews/eVoucher_Case_eVoucher1.listView-meta.xml
<ListView>
    <fullName>eVoucher_Case_eVoucher1</fullName>
    <filterScope>Queue</filterScope>
    <label>eVoucher</label>
    <queue>eVoucher</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>